# SpaceWireRMAPLibrary

./: .gitignore  CMakeLists.txt  README  README.md  README.text  _clang-format  conanfile.txt
doc/: SpaceWireRMAPLibraryUserGuide-jp.adoc  SpaceWireRMAPLibraryUserGuide.adoc
exampleMakefile/: Makefile
include/old/: RMAPPacket.hh  RMAPTransaction.hh  SpaceWireIF.hh  SpaceWireR.hh
include/old/SpaceWireR/: SpaceWireRProtocol.hh  SpaceWireRTEP.hh  SpaceWireRTransmitTEP.hh
include/rmap/: rmapengine.hh  rmapinitiator.hh  rmappacket.hh  rmapprotocol.hh  rmapreplystatus.hh  rmaptargetnode.hh  rmaputilities.hh
include/spacewire/: serialport.hh  spacewireif.hh  spacewireifovertcp.hh  spacewireifoveruart.hh  spacewirepacket.hh  spacewireprotocol.hh  spacewiressdtpmodule.hh  spacewiressdtpmoduleuart.hh  spacewireutil.hh  tcpsocket.hh  types.hh
include/spacewirer/: spacewirer.hh  spacewirerclassinterfaces.hh  spacewirerengine.hh  spacewirerpacket.hh  spacewirerprotocol.hh  spacewirerreceivetep.hh  spacewirertep.hh  spacewirertepexceptions.hh  spacewirertransmittep.hh  spacewirerutilities.hh
includes/: RMAP.hh  RMAPEngine.hh  RMAPInitiator.hh  RMAPInitiatorOptions.hh  RMAPMemoryObject.hh  RMAPNode.hh  RMAPPacket.hh  RMAPProtocol.hh  RMAPReplyException.hh  RMAPReplyStatus.hh  RMAPTarget.hh  RMAPTargetNode.hh  RMAPTransaction.hh  RMAPUtilities.hh  RouterConfigurationPort.hh  SpaceWire.hh  SpaceWireEOPMarker.hh  SpaceWireIF.hh  SpaceWireIFMultiplexedIF.hh  SpaceWireIFMultiplexer.hh  SpaceWireIFMultiplexerSuperClass.hh  SpaceWireIFOverIPClient.hh  SpaceWireIFOverSPI.hh  SpaceWireIFOverTCP.hh  SpaceWirePacket.hh  SpaceWireProtocol.hh  SpaceWireR.hh  SpaceWireSSDTPModule.hh  SpaceWireSpacePiModule.hh  SpaceWireUtilities.hh
includes/Boards/: Doxyfile  SpaceFibreADC.hh
includes/Boards/SpaceFibreADCBoardModules/: ChannelManager.hh  ChannelModule.hh  Constants.hh  ConsumerManager.hh  ConsumerManagerSocketFIFO.hh  DataRecorder.hh  Debug.hh  EventDecoder.hh  RMAPHandler.hh  SemaphoreRegister.hh  Types.hh
includes/ConfigurationPorts/: ShimafujiElectricSpaceWire6PortRouter.hh  ShimafujiElectricSpaceWireToGigabitEthernetStandalone.hh
includes/SpaceWireR/: SpaceWireRClassInterfaces.hh  SpaceWireREngine.hh  SpaceWireRPacket.hh  SpaceWireRProtocol.hh  SpaceWireRReceiveTEP.hh  SpaceWireRTEP.hh  SpaceWireRTEPExceptions.hh  SpaceWireRTransmitTEP.hh  SpaceWireRUtilities.hh
includes/old/: RMAP.hh  RMAPMemoryObject.hh  RMAPProtocol.hh  RMAPTarget.hh  RMAPTargetNode.hh  SpaceWire.hh  SpaceWireEOPMarker.hh  SpaceWireIFOverTCP.hh  SpaceWireSSDTPModule.hh  SpaceWireUtilities.hh
includes/old/SpaceWireR/: SpaceWireREngine.hh  SpaceWireRPacket.hh  SpaceWireRTEPExceptions.hh  SpaceWireRUtilities.hh
sources/: Makefile  main_RMAP_calculateCRC.cc  main_RMAP_instructionToString.cc  main_RMAP_interpretAsAnRMAPPacket.cc  main_RMAP_readWriteRMAPTargetNode.cc  main_RMAP_replyStatusToString.cc  main_RouterConfigurator.cc  main_SpaceWireRTest.cc  main_SpaceWire_packetSink.cc  main_SpaceWire_sendreceivePacketsWithScenario.cc  test_RMAPMemoryObject_fromXMLFile.cc  test_RMAPPacket.cc  test_RMAPTargetNode_fromXMLFile.cc  tutorial_RMAPLayer.cc  tutorial_RMAPPacket_creationInterpretation.cc  tutorial_RMAPTarget.cc  tutorial_SimpleRMAPTarget.cc  tutorial_SpaceWireLayer.cc  tutorial_SpaceWireLayer_periodicTimecodeEmission.cc
sources/configurationFiles/: Tutorial_RMAPTarget.xml
sources/sampleXML/: SampleRMAPMemoryObject.xml  SampleRMAPTargetNode_001.xml  SampleSpaceWireToGiabitEther.xml
sources/tests/: Makefile  test_RMAPInitiator_RMAPEngine.cc  test_RMAPTargetNode.cc  test_RMAPTargetNode_fromXMLFile.cc  test_SpaceWireRPacket  test_SpaceWireRPacket.cc  test_SpaceWireR_sendReceive.cc  test_TCPSocket_receive.cc  test_nonBlockingSpaceWireRouter_with_SpaceWireR.cc  test_periodic_packet_source.cc
src/cli/: rmap_packet.cc
src/rmap/: rmapengine.cc  rmapinitiator.cc  rmappacket.cc  rmapreplystatus.cc
src/spacewire/: spacewireifoveruart.cc  spacewiressdtpmodule.cc  spacewiressdtpmoduleuart.cc  spacewireutil.cc  tcpsocket.cc
swig/: CMakeLists.txt
swig/java/: CMakeLists.txt  SpaceWireRMAP.i  cleaner.sh
swig/ruby/: CMakeLists.txt  SpaceWireRMAP.i
swig/testrun/: Tutorial_RMAPTarget.xml  rmap_test.rb  test_rmappacket.rb  test_spacewireif_client.rb  test_spacewireif_server.rb
test/: CMakeLists.txt  testrmapengine.cc
test/src/rmap/: testrmappacket.cc
test/src/spacewire/: testspacewireif.cc
